docs: :memo: define RoomType enum as paremeter on swagger documentation
