# openapi.json
@@ -37,6 +37,22 @@
         ]
       }
     },
+    "/api/rooms/hotel": {
+      "get": {
+        "operationId": "RoomsController_findHotelInfo",
+        "summary": "Find hotel info",
+        "description": "Returns information about the hotel, including total rooms and available rooms",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Hotel information"
+          }
+        },
+        "tags": [
+          "Rooms"
+        ]
+      }
+    },
     "/api/rooms/available": {
       "get": {
         "operationId": "RoomsController_findAvailableRooms",
@@ -79,7 +95,11 @@
             "in": "query",
             "description": "Type of room",
             "schema": {
-              "example": "standard",
+              "enum": [
+                "JUNIOR",
+                "KING",
+                "PRESIDENTIAL"
+              ],
               "type": "string"
             }
           }
